// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`apmUiEnabled 1`] = `
<EuiPanel
  grow={true}
  hasShadow={false}
  paddingSize="l"
>
  <EuiFlexGroup
    alignItems="stretch"
    component="div"
    direction="row"
    gutterSize="l"
    justifyContent="flexStart"
    responsive={true}
    wrap={false}
  >
    <EuiFlexItem
      component="div"
      grow={true}
    >
      <EuiTitle
        size="m"
      >
        <FormattedMessage
          defaultMessage="Add Data to Kibana"
          id="kbn.home.addData.addDataToKibanaTitle"
          tagName="h3"
          values={Object {}}
        />
      </EuiTitle>
      <EuiText
        grow={true}
      >
        <FormattedMessage
          defaultMessage="Use these solutions to quickly turn your data into pre-built dashboards and monitoring systems."
          id="kbn.home.addData.addDataToKibanaDescription"
          tagName="p"
          values={Object {}}
        />
      </EuiText>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiSpacer
    size="l"
  />
  <EuiFlexGroup
    alignItems="stretch"
    component="div"
    direction="row"
    gutterSize="none"
    justifyContent="flexStart"
    responsive={true}
    wrap={true}
  >
    <EuiFlexItem
      component="div"
      grow={true}
    >
      <EuiCard
        className="homAddData__card"
        description="APM automatically collects in-depth performance metrics and errors from inside your applications."
        footer={
          <EuiButton
            className="homAddData__button"
            color="primary"
            fill={false}
            href="#/home/tutorial/apm"
            iconSide="left"
            type="button"
          >
            <FormattedMessage
              defaultMessage="Add APM"
              id="kbn.home.addData.apm.addApmButtonLabel"
              values={Object {}}
            >
              [Function]
            </FormattedMessage>
          </EuiButton>
        }
        icon={
          <EuiIcon
            className="homAddData__icon"
            size="m"
            type="apmApp"
          />
        }
        layout="vertical"
        textAlign="center"
        title="APM"
        titleElement="span"
      />
    </EuiFlexItem>
    <EuiFlexItem
      component="div"
      grow={true}
    >
      <EuiCard
        className="homAddData__card"
        description="Ingest logs from popular data sources and easily visualize in preconfigured dashboards."
        footer={
          <EuiButton
            className="homAddData__button"
            color="primary"
            fill={false}
            href="#/home/tutorial_directory/logging"
            iconSide="left"
            type="button"
          >
            <FormattedMessage
              defaultMessage="Add log data"
              id="kbn.home.addData.logging.addLogDataButtonLabel"
              values={Object {}}
            >
              [Function]
            </FormattedMessage>
          </EuiButton>
        }
        icon={
          <EuiIcon
            className="homAddData__icon"
            size="m"
            type="loggingApp"
          />
        }
        layout="vertical"
        textAlign="center"
        title="Logging"
        titleElement="span"
      />
    </EuiFlexItem>
    <EuiFlexItem
      component="div"
      grow={true}
    >
      <EuiCard
        className="homAddData__card"
        description="Collect metrics from the operating system and services running on your servers."
        footer={
          <EuiButton
            className="homAddData__button"
            color="primary"
            fill={false}
            href="#/home/tutorial_directory/metrics"
            iconSide="left"
            type="button"
          >
            <FormattedMessage
              defaultMessage="Add metric data"
              id="kbn.home.addData.metrics.addMetricsDataButtonLabel"
              values={Object {}}
            >
              [Function]
            </FormattedMessage>
          </EuiButton>
        }
        icon={
          <EuiIcon
            className="homAddData__icon"
            size="m"
            type="monitoringApp"
          />
        }
        layout="vertical"
        textAlign="center"
        title="Metrics"
        titleElement="span"
      />
    </EuiFlexItem>
    <EuiFlexItem
      component="div"
      grow={true}
    >
      <EuiCard
        className="homAddData__card"
        description="Centralize security events for interactive investigation in ready-to-go visualizations."
        footer={
          <EuiButton
            className="homAddData__button"
            color="primary"
            fill={false}
            href="#/home/tutorial_directory/security"
            iconSide="left"
            type="button"
          >
            <FormattedMessage
              defaultMessage="Add security events"
              id="kbn.home.addData.security.addSecurityEventsButtonLabel"
              values={Object {}}
            >
              [Function]
            </FormattedMessage>
          </EuiButton>
        }
        icon={
          <EuiIcon
            className="homAddData__icon"
            size="m"
            type="securityApp"
          />
        }
        layout="vertical"
        textAlign="center"
        title="Security Analytics"
        titleElement="span"
      />
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiHorizontalRule
    margin="l"
    size="full"
  />
  <EuiFlexGroup
    alignItems="stretch"
    component="div"
    direction="row"
    gutterSize="l"
    justifyContent="spaceAround"
    responsive={true}
    wrap={false}
  >
    <EuiFlexItem
      className="homAddData__footerItem"
      component="div"
      grow={true}
    >
      <EuiText
        grow={true}
      >
        <FormattedMessage
          defaultMessage="Sample Data"
          id="kbn.home.addData.sampleDataTitle"
          values={Object {}}
        />
        <EuiLink
          color="primary"
          href="#/home/tutorial_directory/sampleData"
          style={
            Object {
              "marginLeft": 8,
            }
          }
          type="button"
        >
          <FormattedMessage
            defaultMessage="Load a data set and a Kibana dashboard"
            id="kbn.home.addData.sampleDataLink"
            values={Object {}}
          />
        </EuiLink>
      </EuiText>
    </EuiFlexItem>
    <EuiFlexItem
      className="homAddData__footerItem"
      component="div"
      grow={true}
    >
      <EuiText
        grow={true}
      >
        <FormattedMessage
          defaultMessage="Your Data"
          id="kbn.home.addData.yourDataTitle"
          values={Object {}}
        />
        <EuiLink
          color="primary"
          href="#/management/kibana/index"
          style={
            Object {
              "marginLeft": 8,
            }
          }
          type="button"
        >
          <FormattedMessage
            defaultMessage="Connect to your Elasticsearch index"
            id="kbn.home.addData.yourDataLink"
            values={Object {}}
          />
        </EuiLink>
      </EuiText>
    </EuiFlexItem>
  </EuiFlexGroup>
</EuiPanel>
`;

exports[`isNewKibanaInstance 1`] = `
<EuiPanel
  grow={true}
  hasShadow={false}
  paddingSize="l"
>
  <EuiFlexGroup
    alignItems="stretch"
    component="div"
    direction="row"
    gutterSize="l"
    justifyContent="flexStart"
    responsive={true}
    wrap={false}
  >
    <EuiFlexItem
      component="div"
      grow={true}
    >
      <EuiTitle
        size="m"
      >
        <FormattedMessage
          defaultMessage="Add Data to Kibana"
          id="kbn.home.addData.addDataToKibanaTitle"
          tagName="h3"
          values={Object {}}
        />
      </EuiTitle>
      <EuiText
        grow={true}
      >
        <FormattedMessage
          defaultMessage="Use these solutions to quickly turn your data into pre-built dashboards and monitoring systems."
          id="kbn.home.addData.addDataToKibanaDescription"
          tagName="p"
          values={Object {}}
        />
      </EuiText>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiSpacer
    size="l"
  />
  <EuiFlexGroup
    alignItems="stretch"
    component="div"
    direction="row"
    gutterSize="none"
    justifyContent="flexStart"
    responsive={true}
    wrap={true}
  >
    <EuiFlexItem
      component="div"
      grow={true}
    >
      <EuiCard
        className="homAddData__card"
        description="Ingest logs from popular data sources and easily visualize in preconfigured dashboards."
        footer={
          <EuiButton
            className="homAddData__button"
            color="primary"
            fill={false}
            href="#/home/tutorial_directory/logging"
            iconSide="left"
            type="button"
          >
            <FormattedMessage
              defaultMessage="Add log data"
              id="kbn.home.addData.logging.addLogDataButtonLabel"
              values={Object {}}
            >
              [Function]
            </FormattedMessage>
          </EuiButton>
        }
        icon={
          <EuiIcon
            className="homAddData__icon"
            size="m"
            type="loggingApp"
          />
        }
        layout="vertical"
        textAlign="center"
        title="Logging"
        titleElement="span"
      />
    </EuiFlexItem>
    <EuiFlexItem
      component="div"
      grow={true}
    >
      <EuiCard
        className="homAddData__card"
        description="Collect metrics from the operating system and services running on your servers."
        footer={
          <EuiButton
            className="homAddData__button"
            color="primary"
            fill={false}
            href="#/home/tutorial_directory/metrics"
            iconSide="left"
            type="button"
          >
            <FormattedMessage
              defaultMessage="Add metric data"
              id="kbn.home.addData.metrics.addMetricsDataButtonLabel"
              values={Object {}}
            >
              [Function]
            </FormattedMessage>
          </EuiButton>
        }
        icon={
          <EuiIcon
            className="homAddData__icon"
            size="m"
            type="monitoringApp"
          />
        }
        layout="vertical"
        textAlign="center"
        title="Metrics"
        titleElement="span"
      />
    </EuiFlexItem>
    <EuiFlexItem
      component="div"
      grow={true}
    >
      <EuiCard
        className="homAddData__card"
        description="Centralize security events for interactive investigation in ready-to-go visualizations."
        footer={
          <EuiButton
            className="homAddData__button"
            color="primary"
            fill={false}
            href="#/home/tutorial_directory/security"
            iconSide="left"
            type="button"
          >
            <FormattedMessage
              defaultMessage="Add security events"
              id="kbn.home.addData.security.addSecurityEventsButtonLabel"
              values={Object {}}
            >
              [Function]
            </FormattedMessage>
          </EuiButton>
        }
        icon={
          <EuiIcon
            className="homAddData__icon"
            size="m"
            type="securityApp"
          />
        }
        layout="vertical"
        textAlign="center"
        title="Security Analytics"
        titleElement="span"
      />
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiHorizontalRule
    margin="l"
    size="full"
  />
  <EuiFlexGroup
    alignItems="stretch"
    component="div"
    direction="row"
    gutterSize="l"
    justifyContent="spaceAround"
    responsive={true}
    wrap={false}
  >
    <EuiFlexItem
      className="homAddData__footerItem homAddData__footerItem--highlight"
      component="div"
      grow={true}
    >
      <EuiText
        grow={true}
      >
        <FormattedMessage
          defaultMessage="Sample Data"
          id="kbn.home.addData.sampleDataTitle"
          values={Object {}}
        />
        <EuiLink
          color="primary"
          href="#/home/tutorial_directory/sampleData"
          style={
            Object {
              "marginLeft": 8,
            }
          }
          type="button"
        >
          <FormattedMessage
            defaultMessage="Load a data set and a Kibana dashboard"
            id="kbn.home.addData.sampleDataLink"
            values={Object {}}
          />
        </EuiLink>
      </EuiText>
    </EuiFlexItem>
    <EuiFlexItem
      className="homAddData__footerItem homAddData__footerItem--highlight"
      component="div"
      grow={true}
    >
      <EuiText
        grow={true}
      >
        <FormattedMessage
          defaultMessage="Your Data"
          id="kbn.home.addData.yourDataTitle"
          values={Object {}}
        />
        <EuiLink
          color="primary"
          href="#/management/kibana/index"
          style={
            Object {
              "marginLeft": 8,
            }
          }
          type="button"
        >
          <FormattedMessage
            defaultMessage="Connect to your Elasticsearch index"
            id="kbn.home.addData.yourDataLink"
            values={Object {}}
          />
        </EuiLink>
      </EuiText>
    </EuiFlexItem>
  </EuiFlexGroup>
</EuiPanel>
`;

exports[`render 1`] = `
<EuiPanel
  grow={true}
  hasShadow={false}
  paddingSize="l"
>
  <EuiFlexGroup
    alignItems="stretch"
    component="div"
    direction="row"
    gutterSize="l"
    justifyContent="flexStart"
    responsive={true}
    wrap={false}
  >
    <EuiFlexItem
      component="div"
      grow={true}
    >
      <EuiTitle
        size="m"
      >
        <FormattedMessage
          defaultMessage="Add Data to Kibana"
          id="kbn.home.addData.addDataToKibanaTitle"
          tagName="h3"
          values={Object {}}
        />
      </EuiTitle>
      <EuiText
        grow={true}
      >
        <FormattedMessage
          defaultMessage="Use these solutions to quickly turn your data into pre-built dashboards and monitoring systems."
          id="kbn.home.addData.addDataToKibanaDescription"
          tagName="p"
          values={Object {}}
        />
      </EuiText>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiSpacer
    size="l"
  />
  <EuiFlexGroup
    alignItems="stretch"
    component="div"
    direction="row"
    gutterSize="none"
    justifyContent="flexStart"
    responsive={true}
    wrap={true}
  >
    <EuiFlexItem
      component="div"
      grow={true}
    >
      <EuiCard
        className="homAddData__card"
        description="Ingest logs from popular data sources and easily visualize in preconfigured dashboards."
        footer={
          <EuiButton
            className="homAddData__button"
            color="primary"
            fill={false}
            href="#/home/tutorial_directory/logging"
            iconSide="left"
            type="button"
          >
            <FormattedMessage
              defaultMessage="Add log data"
              id="kbn.home.addData.logging.addLogDataButtonLabel"
              values={Object {}}
            >
              [Function]
            </FormattedMessage>
          </EuiButton>
        }
        icon={
          <EuiIcon
            className="homAddData__icon"
            size="m"
            type="loggingApp"
          />
        }
        layout="vertical"
        textAlign="center"
        title="Logging"
        titleElement="span"
      />
    </EuiFlexItem>
    <EuiFlexItem
      component="div"
      grow={true}
    >
      <EuiCard
        className="homAddData__card"
        description="Collect metrics from the operating system and services running on your servers."
        footer={
          <EuiButton
            className="homAddData__button"
            color="primary"
            fill={false}
            href="#/home/tutorial_directory/metrics"
            iconSide="left"
            type="button"
          >
            <FormattedMessage
              defaultMessage="Add metric data"
              id="kbn.home.addData.metrics.addMetricsDataButtonLabel"
              values={Object {}}
            >
              [Function]
            </FormattedMessage>
          </EuiButton>
        }
        icon={
          <EuiIcon
            className="homAddData__icon"
            size="m"
            type="monitoringApp"
          />
        }
        layout="vertical"
        textAlign="center"
        title="Metrics"
        titleElement="span"
      />
    </EuiFlexItem>
    <EuiFlexItem
      component="div"
      grow={true}
    >
      <EuiCard
        className="homAddData__card"
        description="Centralize security events for interactive investigation in ready-to-go visualizations."
        footer={
          <EuiButton
            className="homAddData__button"
            color="primary"
            fill={false}
            href="#/home/tutorial_directory/security"
            iconSide="left"
            type="button"
          >
            <FormattedMessage
              defaultMessage="Add security events"
              id="kbn.home.addData.security.addSecurityEventsButtonLabel"
              values={Object {}}
            >
              [Function]
            </FormattedMessage>
          </EuiButton>
        }
        icon={
          <EuiIcon
            className="homAddData__icon"
            size="m"
            type="securityApp"
          />
        }
        layout="vertical"
        textAlign="center"
        title="Security Analytics"
        titleElement="span"
      />
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiHorizontalRule
    margin="l"
    size="full"
  />
  <EuiFlexGroup
    alignItems="stretch"
    component="div"
    direction="row"
    gutterSize="l"
    justifyContent="spaceAround"
    responsive={true}
    wrap={false}
  >
    <EuiFlexItem
      className="homAddData__footerItem"
      component="div"
      grow={true}
    >
      <EuiText
        grow={true}
      >
        <FormattedMessage
          defaultMessage="Sample Data"
          id="kbn.home.addData.sampleDataTitle"
          values={Object {}}
        />
        <EuiLink
          color="primary"
          href="#/home/tutorial_directory/sampleData"
          style={
            Object {
              "marginLeft": 8,
            }
          }
          type="button"
        >
          <FormattedMessage
            defaultMessage="Load a data set and a Kibana dashboard"
            id="kbn.home.addData.sampleDataLink"
            values={Object {}}
          />
        </EuiLink>
      </EuiText>
    </EuiFlexItem>
    <EuiFlexItem
      className="homAddData__footerItem"
      component="div"
      grow={true}
    >
      <EuiText
        grow={true}
      >
        <FormattedMessage
          defaultMessage="Your Data"
          id="kbn.home.addData.yourDataTitle"
          values={Object {}}
        />
        <EuiLink
          color="primary"
          href="#/management/kibana/index"
          style={
            Object {
              "marginLeft": 8,
            }
          }
          type="button"
        >
          <FormattedMessage
            defaultMessage="Connect to your Elasticsearch index"
            id="kbn.home.addData.yourDataLink"
            values={Object {}}
          />
        </EuiLink>
      </EuiText>
    </EuiFlexItem>
  </EuiFlexGroup>
</EuiPanel>
`;
